configure gradle tests